<resources>
    <string name="app_name">MOBDEV Compilation</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_header_title">Mobile Development Compilation</string>
    <string name="nav_header_subtitle">Created by Jericho Diaz</string>

    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>

    <string name="menu_basics">Basic Applications</string>
    <string name="menu_printname">Print Name</string>
    <string name="menu_evenodd">Odd or Even</string>
    <string name="menu_android_status">Android Status</string>
    <string name="menu_calculator">Mini Calculator</string>

    <string name="menu_activities">Activities</string>
    <string name="menu_minigame1">The Struggle</string>
    <string name="menu_randomquotes">Random Quotes</string>
        <string name="fragment_love_quote">Love Quotes</string>

    <string name="menu_lectures">Lectures</string>
    <string name="menu_LM1">LM1</string>
    <string name="menu_LM2">LM2</string>
    <string name="menu_LM3">LM3</string>

    <string name="menu_slideshow">Slideshow</string>
</resources>