<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_basics_menu"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_basics">

            <menu>
                <item
                    android:id="@+id/nav_oddeven"
                    android:title="@string/menu_evenodd" />
                <item
                    android:id="@+id/nav_printname"
                    android:title="@string/menu_printname" />
                <item
                    android:id="@+id/nav_android_status"
                    android:title="@string/menu_android_status" />
            </menu>
        </item>
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
    </group>
</menu>