<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.mariejuana.mobdevcompilation.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_oddeven"
        android:name="com.mariejuana.mobdevcompilation.ui.basics.oddeven.OddEvenFragment"
        android:label="@string/menu_evenodd"
        tools:layout="@layout/fragment_oddeven" />

    <fragment
        android:id="@+id/nav_printname"
        android:name="com.mariejuana.mobdevcompilation.ui.basics.printname.PrintNameFragment"
        android:label="@string/menu_printname"
        tools:layout="@layout/fragment_printname" />
    <fragment
        android:id="@+id/nav_android_status"
        android:name="com.mariejuana.mobdevcompilation.ui.basics.getandroidstatus.GetAndroidStatusFragment"
        android:label="@string/menu_android_status" />
    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.mariejuana.mobdevcompilation.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_calculator"
        android:name="com.mariejuana.mobdevcompilation.ui.basics.calculator.CalculatorFragment"
        android:label="@string/menu_calculator"
        tools:layout="@layout/fragment_calculator" />
    <fragment
        android:id="@+id/nav_minigame1"
        android:name="com.mariejuana.mobdevcompilation.ui.activities.minigame1.MiniGame1Fragment"
        android:label="@string/menu_minigame1"
        tools:layout="@layout/fragment_minigame1" />
    <fragment
        android:id="@+id/nav_lm_1"
        android:name="com.mariejuana.mobdevcompilation.ui.lectures.midterms.lecture1.LM1Fragment"
        android:label="@string/menu_LM1" />
    <fragment
        android:id="@+id/nav_randomquotes"
        android:name="com.mariejuana.mobdevcompilation.ui.activities.randomquotes.MainFragment"
        android:label="@string/menu_randomquotes">
        <action
            android:id="@+id/action_nav_randomquotes_to_faveFragment"
            app:destination="@id/faveFragment" />
        <action
            android:id="@+id/action_nav_randomquotes_to_sharedFragment"
            app:destination="@id/sharedFragment" />
    </fragment>
    <fragment
        android:id="@+id/nav_lm_2"
        android:name="com.mariejuana.mobdevcompilation.ui.lectures.midterms.lecture2.LM2Fragment"
        android:label="@string/menu_LM2" />
    <fragment
        android:id="@+id/faveFragment"
        android:name="com.mariejuana.mobdevcompilation.ui.activities.randomquotes.FaveFragment"
        android:label="fragment_fave"
        tools:layout="@layout/fragment_fave" >
        <action
            android:id="@+id/action_faveFragment_to_nav_randomquotes"
            app:destination="@id/nav_randomquotes" />
    </fragment>
    <fragment
        android:id="@+id/sharedFragment"
        android:name="com.mariejuana.mobdevcompilation.ui.activities.randomquotes.SharedFragment"
        android:label="fragment_shared"
        tools:layout="@layout/fragment_shared" >
        <action
            android:id="@+id/action_sharedFragment_to_nav_randomquotes"
            app:destination="@id/nav_randomquotes" />
    </fragment>
</navigation>